// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with-indefinite-article modifier for change payload type should render change template with a article 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    
    System
     informed by 
    a social network
    
  </div>
</div>
`;

exports[`with-indefinite-article modifier for change payload type should render change template with an article 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    
    System
     informed by 
    an SMS
    
  </div>
</div>
`;
